Content jumping solved (for real this time).

--- a/src/public/css/input.css
+++ b/src/public/css/input.css
@@ -178,7 +178,7 @@
 .image-wrapper {
   position: relative;
   height: 0;
-  padding-top: 161.9433198381%;
+  padding-top: 133.4008097166%;
 }
 
 .image-wrapper img {
