--- a/src/public/sass/_imageWrapper.scss
+++ b/src/public/sass/_imageWrapper.scss
@@ -7,8 +7,10 @@
 .image-wrapper {
   position: relative;
   height: 0;
-  padding-top: ((800/494) * 100%);
+  padding-top: ((659/494) * 100%);
 }
+
+// using image container height rather than image height
 
 .image-wrapper img {
   position: absolute;
@@ -19,12 +21,6 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .image-wrapper {
-    background: lightblue;
-    border: 1px solid $gunmetalGray;
-    margin: 0 auto;
-  }
-
   #left-button-container, #right-button-container {
     display: none;
   }
